...
                                    callbacks.onAddPaymentClick() 
                                } else {
                                    val msg = context.getString(R.string.err_save_before_payment, typeStr)
                                    callbacks.onShowSnackbar(msg)
                                }
                            },
                            modifier = Modifier.weight(1f).padding(end = 4.dp).testTag("addPaymentButton")
                        ) {
                            Icon(Icons.Default.Add, contentDescription = null)
                            Spacer(modifier = Modifier.width(8.dp))
                            Text(stringResource(R.string.btn_add_new))
                        }

...
